# sunshine-keybase-ui-old

./: Cargo.toml  Makefile.toml  README.md  analysis_options.yaml  cbindgen.toml  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/foundation/sunshine/identity/: MainActivity.java
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  constants.dart  identity.dart  main.dart  router.dart  router.gr.dart  setup.dart  setup.iconfig.dart
lib/core/: register_module.dart
lib/core/extensions/: router.dart
lib/core/widgets/: button.dart  hint_text.dart  input.dart  widgets.dart
lib/models/: account_model.dart  device_model.dart  models.dart
lib/models/identity/: github.dart  service.dart
lib/router/: router.dart  router.gr.dart
lib/screens/: account_screen.dart  blank_screen.dart  devices_screen.dart  generate_account_screen.dart  identities_screen.dart  intro_screen.dart  main_screen.dart  paper_key_screen.dart  recover_account_screen.dart  screens.dart  wallet_transfer_screen.dart
lib/screens/account_pharse_confirmation/: account_pharse_confirmation_screen.dart  account_pharse_confirmation_view_model.dart
lib/screens/account_phrase/: account_pharse_screen.dart
lib/screens/generate_account/: generate_account_screen.dart  generate_account_view_model.dart
lib/screens/home/: home_screen.dart  home_view_model.dart
lib/screens/main/: main_screen.dart
lib/screens/recover_account/: recover_account_screen.dart  recover_account_view_model.dart
lib/screens/unlock_account/: unlock_account_screen.dart  unlock_account_view_model.dart
lib/services/: account_details_service.dart  account_service.dart  device_service.dart  identity_service.dart  key_service.dart  services.dart  wallet_service.dart
lib/services/client/: client_service.dart  dev_client_service.dart  identity_client_service.dart  prod_client_service.dart
lib/ui/: button.dart  header_text.dart  hint_text.dart  list_cell.dart  loading_view.dart  my_app_bar.dart  numpad.dart  ui.dart
lib/ui/account_details_form/: account_details_form.dart  account_details_form_view_model.dart
native/identity-client/: Cargo.toml  binding.h
native/identity-client/src/: lib.rs  runtime.rs
test/: widget_test.dart
