[package]
name = "identity-client"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"

[dependencies.sunshine-identity-ffi]
version = "0.2.2"
features = ["faucet"]

[dependencies.sunshine-client]
git = "https://github.com/sunshine-protocol/sunshine.git"
package = "sunshine-client"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[features]
default = ["faucet"]
faucet = []