[package]
name = "identity-client"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
# this value will change depending on the target os
# for iOS it would be `staticlib`
# for android it would be `c-dylib`
crate-type = ["rlib"]

[dependencies]
log = "0.4"
# we don't use it in code directly..
ed25519-dalek = "=1.0.0-pre.3" # prevent update of ed25519-dalek

[dependencies.sunshine-identity-ffi]
version = "0.2.3"
features = ["faucet"]

[dependencies.sunshine-client]
git = "https://github.com/sunshine-protocol/sunshine.git"
package = "sunshine-client"

[dependencies.frusty-logger]
git = "https://github.com/sunshine-protocol/frusty-logger.git"


[features]
default = ["faucet"]
faucet = []